[tool.poetry]
name = "guess-get-pun"
version = "0.1.0"
description = ""
authors = ["Leonid Zaitcev <antonfenrisis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
prompt = "^0.4.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
